--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,7 @@ dependencies {
     testImplementation 'android.arch.persistence.room:testing:1.1.1'
     //  Room RxJava support
     implementation 'android.arch.persistence.room:rxjava2:1.1.1'
+
+    // CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
