--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:animated-vector-drawable:28.0.0'
@@ -85,4 +85,9 @@ dependencies {
 
     // CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+    // Fly Animation
+    implementation 'com.android.support:support-dynamic-animation:28.0.0'
+    implementation 'androidx.dynamicanimation:dynamicanimation:1.1.0-alpha01'
+
 }
