--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".features.principal.PrincipalActivity"/>
         <activity android:name=".features.detail.DetailActivity"/>
     </application>
 
